--- a/style.css
+++ b/style.css
@@ -30,14 +30,15 @@ header .logo
   position: absolute;
   right: 0;
   width: 100%;
+  height: 300px;
   min-height: 100vh;
-  padding: 150px;
+  padding: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #FFF;
   transition: 0.5s;
-  z-index: 2;
+  /* z-index: 2; */
 }
 .showcase.active
 {
@@ -205,6 +206,16 @@ header .logo
   margin-top: 2%;
   color: white;
 }
+.absolute{
+  margin-top: 600px;
+}
+
+.center-div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media (max-width: 990px) {
   .section1-design2{
@@ -253,3 +264,10 @@ header .logo
     border: 1px solid #e2e8f0;
   }
 }
+
+@media screen and (min-width: 1900px) {
+  .absolute{
+    margin-top: 730px;
+  }
+}
+
