--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header
   top: 0;
   left: 0;
   width: 100%;
-  padding: 40px 100px;
+  padding: 20px 10px;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
@@ -27,10 +27,9 @@ header .logo
 
 .showcase
 {
-  position: absolute;
+  position: relative;
   right: 0;
   width: 100%;
-  height: 300px;
   min-height: 100vh;
   padding: 50px;
   display: flex;
@@ -174,7 +173,7 @@ header .logo
   .showcase,
   .showcase header
   {
-    padding: 40px;
+    /* padding: 40px; */
   }
   .text h2
   {
@@ -206,9 +205,9 @@ header .logo
   margin-top: 2%;
   color: white;
 }
-.absolute{
+/* .absolute{
   margin-top: 600px;
-}
+} */
 
 .center-div{
   display: flex;
@@ -265,9 +264,9 @@ header .logo
   }
 }
 
-@media screen and (min-width: 1900px) {
+/* @media screen and (min-width: 1900px) {
   .absolute{
     margin-top: 730px;
   }
-}
+} */
 
