--- a/style.css
+++ b/style.css
@@ -185,6 +185,31 @@ header .logo
   }
 }
 
+@media (max-width: 600px)
+{
+.showcase video
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 95%;
+  object-fit: cover;
+  opacity: 0.8;
+
+}
+.overlay
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 95%;
+  background: #171ef0;
+  mix-blend-mode: overlay;
+}
+}
+
 
 #section1,#section2,#section3,#section4,#section5 {
   padding: 6% 1%;
